--- a/codes/reinforcement/RL_Cart_Pole_Custom_Env.ipynb
+++ b/codes/reinforcement/RL_Cart_Pole_Custom_Env.ipynb
@@ -1,84 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/hissain/ml/blob/main/codes/reinforcement/RL_frozen_lake_policy_gradient.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "A-M1gqLUIybm",
-    "outputId": "6c1f4762-8085-4c15-8c82-5197251c9503"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 100, Total Reward: -1.07\n",
-      "Episode 200, Total Reward: -1.04\n",
-      "Episode 300, Total Reward: -1.01\n",
-      "Episode 400, Total Reward: -1.16\n",
-      "Episode 500, Total Reward: -1.07\n",
-      "Episode 600, Total Reward: -1.02\n",
-      "Episode 700, Total Reward: -1.02\n",
-      "Episode 800, Total Reward: -1.01\n",
-      "Episode 900, Total Reward: -1.01\n",
-      "Episode 1000, Total Reward: -1.01\n",
-      "Episode 1100, Total Reward: -1.01\n",
-      "Episode 1200, Total Reward: -1.01\n",
-      "Episode 1300, Total Reward: -1.01\n",
-      "Episode 1400, Total Reward: -1.01\n",
-      "Episode 1500, Total Reward: -1.01\n",
-      "Episode 1600, Total Reward: -1.01\n",
-      "Episode 1700, Total Reward: -1.01\n",
-      "Episode 1800, Total Reward: -1.01\n",
-      "Episode 1900, Total Reward: -1.01\n",
-      "Episode 2000, Total Reward: -1.01\n",
-      "Episode 2100, Total Reward: -1.01\n",
-      "Episode 2200, Total Reward: -1.01\n",
-      "Episode 2300, Total Reward: -1.01\n",
-      "Episode 2400, Total Reward: -1.05\n",
-      "Episode 2500, Total Reward: -1.01\n",
-      "Episode 2600, Total Reward: -1.01\n",
-      "Episode 2700, Total Reward: -1.01\n",
-      "Episode 2800, Total Reward: -1.01\n",
-      "Episode 2900, Total Reward: -1.01\n",
-      "Episode 3000, Total Reward: -1.01\n",
-      "Episode 3100, Total Reward: -1.01\n",
-      "Episode 3200, Total Reward: -1.02\n",
-      "Episode 3300, Total Reward: -1.01\n",
-      "Episode 3400, Total Reward: -1.01\n",
-      "Episode 3500, Total Reward: -1.01\n",
-      "Episode 3600, Total Reward: -1.01\n",
-      "Episode 3700, Total Reward: -1.01\n",
-      "Episode 3800, Total Reward: -1.01\n",
-      "Episode 3900, Total Reward: -1.26\n",
-      "Episode 4000, Total Reward: -1.01\n",
-      "Episode 4100, Total Reward: -1.01\n",
-      "Episode 4200, Total Reward: -1.01\n",
-      "Episode 4300, Total Reward: -1.01\n",
-      "Episode 4400, Total Reward: -1.01\n",
-      "Episode 4500, Total Reward: -1.01\n",
-      "Episode 4600, Total Reward: -1.01\n",
-      "Episode 4700, Total Reward: -1.01\n",
-      "Episode 4800, Total Reward: -1.01\n",
-      "Episode 4900, Total Reward: -1.01\n",
-      "Episode 5000, Total Reward: -1.01\n",
-      "Training completed.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "0d942579",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -99,11 +26,11 @@
     "        ])\n",
     "        self.start_pos = (0, 0)\n",
     "        self.reset()\n",
-    "\n",
+    "        \n",
     "    def reset(self):\n",
     "        self.current_pos = self.start_pos\n",
     "        return self.get_state()\n",
-    "\n",
+    "    \n",
     "    def get_state(self):\n",
     "        row, col = self.current_pos\n",
     "        state = np.zeros(self.observation_space)\n",
@@ -111,26 +38,26 @@
     "        return state\n",
     "\n",
     "    def step(self, action):\n",
-    "        if action == 0:\n",
+    "        if action == 0: \n",
     "            next_pos = (self.current_pos[0], max(self.current_pos[1] - 1, 0))\n",
-    "        elif action == 1:\n",
+    "        elif action == 1:  \n",
     "            next_pos = (min(self.current_pos[0] + 1, self.grid_size - 1), self.current_pos[1])\n",
-    "        elif action == 2:\n",
+    "        elif action == 2:  \n",
     "            next_pos = (self.current_pos[0], min(self.current_pos[1] + 1, self.grid_size - 1))\n",
-    "        elif action == 3:\n",
+    "        elif action == 3:  \n",
     "            next_pos = (max(self.current_pos[0] - 1, 0), self.current_pos[1])\n",
     "\n",
     "        self.current_pos = next_pos\n",
     "        row, col = next_pos\n",
     "        cell = self.lake[row, col]\n",
-    "\n",
-    "        if cell == 'H':\n",
-    "            return self.get_state(), -1.0, True, {}\n",
-    "        elif cell == 'G':\n",
-    "            return self.get_state(), 10.0, True, {}\n",
-    "        else:\n",
-    "            return self.get_state(), -0.01, False, {}\n",
-    "\n",
+    "        \n",
+    "        if cell == 'H': \n",
+    "            return self.get_state(), 0.0, True, {}\n",
+    "        elif cell == 'G':  \n",
+    "            return self.get_state(), 1.0, True, {}\n",
+    "        else:  \n",
+    "            return self.get_state(), 0.0, False, {}\n",
+    "    \n",
     "    def render(self):\n",
     "        lake_render = self.lake.copy()\n",
     "        row, col = self.current_pos\n",
@@ -144,7 +71,7 @@
     "        super(PolicyNetwork, self).__init__()\n",
     "        self.fc1 = nn.Linear(state_size, 64)\n",
     "        self.fc2 = nn.Linear(64, action_size)\n",
-    "\n",
+    "        \n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
     "        return torch.softmax(self.fc2(x), dim=-1)\n",
@@ -157,7 +84,7 @@
     "        self.gamma = gamma\n",
     "        self.log_probs = []\n",
     "        self.rewards = []\n",
-    "\n",
+    "        \n",
     "    def select_action(self, state):\n",
     "        state = torch.tensor([state], dtype=torch.float32)\n",
     "        probs = self.policy(state)\n",
@@ -168,14 +95,14 @@
     "\n",
     "    def store_reward(self, reward):\n",
     "        self.rewards.append(reward)\n",
-    "\n",
+    "        \n",
     "    def learn(self):\n",
     "        discounted_rewards = []\n",
     "        G = 0\n",
     "        for reward in reversed(self.rewards):\n",
     "            G = reward + self.gamma * G\n",
     "            discounted_rewards.insert(0, G)\n",
-    "\n",
+    "        \n",
     "        discounted_rewards = torch.tensor(discounted_rewards)\n",
     "        discounted_rewards = (discounted_rewards - discounted_rewards.mean()) / (discounted_rewards.std() + 1e-9)\n",
     "\n",
@@ -187,14 +114,14 @@
     "        self.optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        self.optimizer.step()\n",
-    "\n",
+    "        \n",
     "        self.log_probs = []\n",
     "        self.rewards = []\n",
     "\n",
     "# Training Loop\n",
     "env = CustomFrozenLakeEnv(grid_size=4)\n",
     "agent = REINFORCEAgent(state_size=env.observation_space, action_size=env.action_space)\n",
-    "num_episodes = 5000\n",
+    "num_episodes = 1000\n",
     "\n",
     "for episode in range(num_episodes):\n",
     "    state = env.reset()\n",
@@ -209,20 +136,15 @@
     "        state = next_state\n",
     "\n",
     "    agent.learn()\n",
-    "\n",
+    "    \n",
     "    if (episode + 1) % 100 == 0:\n",
     "        print(f\"Episode {episode + 1}, Total Reward: {episode_reward}\")\n",
     "\n",
-    "print(\"Training completed.\")"
+    "print(\"Training completed.\")\n"
    ]
   }
  ],
  "metadata": {
-  "colab": {
-   "authorship_tag": "ABX9TyMODSnGtMukGak3gvoA3I2R",
-   "include_colab_link": true,
-   "provenance": []
-  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -242,5 +164,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 5
 }
