--- a/codes/rag/scraping_dump.ipynb
+++ b/codes/rag/scraping_dump.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3d006d9b",
+   "id": "cc649b88",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "22eeaf77",
+   "id": "23d6ba1b",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "89a4cb9e",
+   "id": "bc371c9b",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9715657e",
+   "id": "b84ec4e0",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c8f3b9fe",
+   "id": "c0a4d935",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a719feed",
+   "id": "265ba620",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0ea29711",
+   "id": "7c8df9a7",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ffa308fa",
+   "id": "457d7af3",
    "metadata": {},
    "outputs": [
     {
@@ -479,10 +479,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "950e20ba",
+   "execution_count": 63,
+   "id": "590f212e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "According to the CONTEXT, the list excludes:\n",
+       "\n",
+       "* Mass killings\n",
+       "* Atrocities not explicitly classified as genocides\n",
+       "* Genocides occurring outside of wartime\n",
+       "* Human sacrifices\n",
+       "* Ethnic cleansing operations\n",
+       "* Acts of state terrorism or political repression during peacetime."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "_ = ask(\"this 'list excludes mass killings and atrocities' of what types?\")"
    ]
