Added scraping load

--- a/codes/rag/scraping_dump.ipynb
+++ b/codes/rag/scraping_dump.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b51afab",
+   "id": "fce3f0b2",
    "metadata": {},
    "source": [
-    "## Using requests APIs"
+    "## Using requests APIs (Cant handle dynamic contents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "33de7398",
+   "execution_count": 32,
+   "id": "5c38d938",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69b18924352c4b0e83cd596e1a866afd",
+       "model_id": "b8499e83567a47aaafa19ab776e350d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "9e6aefe6",
+   "execution_count": 33,
+   "id": "6dd04599",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34c94759",
+   "id": "5d91ebda",
    "metadata": {},
    "source": [
     "## Using Selenium chromedriver"
@@ -118,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "4998d900",
+   "execution_count": 34,
+   "id": "b508acfe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aca86a5996b442d2a151b2eda04f4a5f",
+       "model_id": "6a7ea465397c43aab998ea74b3008717",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,6 +149,9 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
     "from tqdm.notebook import tqdm\n",
     "import pickle\n",
     "import time\n",
@@ -168,7 +171,10 @@
     "    for url in tqdm(urls, desc=\"Scraping HTML content with Selenium\"):\n",
     "        try:\n",
     "            driver.get(url)\n",
-    "            time.sleep(1)  # Optional: wait for page to load fully\n",
+    "            #time.sleep(1)  # Optional: wait for page to load fully\n",
+    "            WebDriverWait(driver, 10).until(\n",
+    "                EC.presence_of_element_located((By.TAG_NAME, \"body\"))\n",
+    "            )\n",
     "            html_content = driver.page_source\n",
     "            html_content_list.append((url, html_content))\n",
     "        except Exception as e:\n",
@@ -205,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "7d913a73",
+   "execution_count": 31,
+   "id": "5d185237",
    "metadata": {},
    "outputs": [
     {
