--- a/codes/rag/scraping_table.ipynb
+++ b/codes/rag/scraping_table.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "2b8e505f",
+   "execution_count": 140,
+   "id": "23828579",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f240db6758da4ceaa13521220d0fcfc2",
+       "model_id": "f5e7e82a4b764923bf780694e926c4d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Chunks: 307\n",
+      "Total Chunks: 299\n",
       "Chunk: contents list of wars by death toll List of wars by death toll | 0 ||| Part of a series on || War (outline) || showHistory || showMilitary || showBattlespace || showWeapons || showTactics || showOperational || showStrategy || showGrand strategy || showAdministrative || showOrganization || showPersonnel || showLogistics || showScience || showLaw || showTheory || showNon-warfare || showCulture || showRelated || hideLists Battles Military occupations Military terms Operations Sieges War crimes Wars Weapons Writers || vte || this list of wars by death toll includes all deaths that are either directly or indirectly caused by war. these numbers include the deaths of military personnel which are the direct results of a battle or other military wartime actions, as well as wartime / war - related deaths of civilians which are often results of war - induced epidemics, famines, genocide, etc. due to incomplete records, the destruction of evidence, differing methods of counting, and various other reasons, death tolls of wars have often been quite uncertain, and heavily debated. while the definition of war isn't entirely clear - cut, there is a general understanding of what it is. merriam - webster defines war as \" a state of usually open and declared armed hostile conflict between states or nations \", [ 1 ] oxford english dictionary defines war as \" hostile contention by means of armed forces, carried on between nations, states, or rulers, or between parties in the same nation or state ; the employment of armed forces against a foreign power, or against an opposing party in the state \", [ 2 ] and encyclopædia britannica defines war as \" a conflict between political groups involving hostilities of considerable duration and magnitude \". [ 3 ] this list excludes mass killings and atrocities not explicitly classified as genocides, as well as genocides occurring outside of wartime, human sacrifices, ethnic cleansing operations, and acts of state terrorism or political repression during peacetime. [ a ] list\n",
       "Source URL: https://en.wikipedia.org/wiki/List_of_wars_by_death_toll\n",
       "\n",
@@ -39,12 +39,6 @@
       "Source URL: https://en.wikipedia.org/wiki/List_of_wars_by_death_toll\n",
       "\n",
       "Chunk: List | War | Death range | Date | Combatants | Location ||| crusades | 1 – 9 million [ 25 ] [ 26 ] | 1095 – 1291 | originally byzantine empire vs. seljuk empire, but evolved into christians vs. muslims | europe and the middle east || Reconquista | 7 million[27] | 718–1492 | Spanish and Portuguese Christians vs. Spanish and Portuguese Muslims | Iberian Peninsula || French Revolutionary and Napoleonic Wars | 5–7 million[28] | 1792–1815 | French Republic, later French Empire, vs. Coalition forces | Europe || Conquests of Menelik II | 6 million[29] | 1878–1904 | Ethiopian Empire vs. Emirate of Harar, Kingdom of Kaffa, Kingdom of Wolaita, and allies | Horn of Africa || Second Congo War | 3–5.4 million[30][31][32] | 1998–2003 | Multiple sides | Democratic Republic of the Congo || Spanish conquest of New Granada | 5.25 million[33][34] | 1525–1540 | Spanish Empire and Klein-Venedig vs. Muisca Confederation and other civilizations | Colombia || Deccan wars | 4.6–5 million[35] | 1680–1707 | Mughal Empire vs. Maratha Confederacy | Indian subcontinent || Nigerian Civil War | 3.04–4.1 million[36][37] | 1967–1970 | Nigeria vs. Biafra | Nigeria || Deluge | 3–4 milion[38] | 1648–1666 | Poland–Lithuania vs Swedish Empire and Russia | Eastern Europe || French Wars of Religion | 2–4 million[39] | 1562–1598 | French catholics vs Huguenots | France || Korean War | 2.5–3.5 million[40][22] | 1950–1953 | North Korea and allies vs. South Korea and allies | Korean Peninsula || Vietnam War | 1.1–3.4 million[41][42] | 1955–1975 | North Vietnam and allies vs. South Vietnam and allies | Indochina ||\n",
-      "Source URL: https://en.wikipedia.org/wiki/List_of_wars_by_death_toll\n",
-      "\n",
-      "Chunk: List | War | Death range | Date | Combatants | Location ||| hundred years'war | 2. 3 – 3. 3 million [ 43 ] [ 44 ] | 1337 – 1453 | house of valois vs. house of plantagenet | western europe || Afghan conflict | 1.17–3 million[45][46][47] | 1978–present | Multiple sides; Afghan mujahideen, later Islamic Emirate of Afghanistan, United Tajik Opposition vs. Soviet Union, Democratic Republic of Afghanistan, Northern Alliance, Tajikistan, and the United States-led coalition | Afghanistan, Pakistan and Tajikistan || Delhi Conquest of North India | 0.5–3 million[48] | 1300–1310 | Delhi Sultanate vs. North Indian States | Indian subcontinent || Bangladesh Liberation War | 0.3–3 million[49][50] | 1971 | India and Provisional Government of Bangladesh vs. Pakistan | Indian subcontinent || Mexican Revolution | 1.7–2.7 million[51] | 1910–1920 | Anti-government vs. Pro-government | Mexico || Ethiopian Civil War and Eritrean War of Independence | 1.75–2 million[52][53][54] | 1961–1991[c] | EPRDF, later EPLF vs. Derg and People's Democratic Republic of Ethiopia | Horn of Africa || Russo-Circassian War and Caucasian War | 1.5–2 million[55] | 1763–1864 | Circassian Confederation, Principality of Abkhazia, and Caucasian Imamate vs. Russian Empire | Caucasus || Second Sudanese Civil War | 1–2 million[56][57] | 1983–2005 | Sudan vs. SSPDF | Sudan || Tây Sơn wars | 1–2 million[58][59] | 1771-1802 | Tây Sơn dynasty vs. Nguyễn lords, Kingdom of Cambodia, Rattanakosin Kingdom, and Kingdom of France | Indochina || Akbar's Conquest of North India | 1–2 million[60] | 1556–1605 | Mughal Empire vs. North Indian States | Indian subcontinent || Indian Rebellion of 1857 | 0.8–2 million[61] | 1857–1858 | United Kingdom and allies vs. Indian rebels and allies | Indian subcontinent ||\n",
-      "Source URL: https://en.wikipedia.org/wiki/List_of_wars_by_death_toll\n",
-      "\n",
-      "Chunk: List | War | Death range | Date | Combatants | Location ||| balkan wars | 0. 75 – 1. 77 million [ 62 ] [ 63 ] | 1912 – 1913 | ottoman empire vs. bulgaria, serbia, greece, and montenegro ; later bulgaria vs. serbia, greece, montenegro, and romania | balkans || Algerian War | 0.4–1.6 million[64][65] | 1954–1962 | France vs. Separatists National Liberation Front, Algerian National Movement, and Algerian Communist Party | North Africa || French conquest of Algeria | 0.98–1.48 million[66][67][68] | 1830–1903 | France vs. Regency of Algiers, Emirate of Abdelkader, Kingdom of Beni Abbas, and allies | North Africa || Gallic Wars | 1.47 million[69][70][71] | 58 BCE–50 BCE | Roman Empire vs. Gauls | Gaul || Jewish-Roman wars | 0.35–1.4 million[72][73] | 66–135 | Roman Empire vs. Judean provisional government | Fertile Crescent || War of the Spanish Succession | 0.4–1.25 million[74][75] | 1701–1714 | Habsburg Spain, Great Britain, Holy Roman Empire, and allies vs. Bourboun Spain, Kingdom of France, and allies | Global || Franco-Prussian War | 1.15 million[76][77] | 1870–1871 | Second French Empire, later Third French Republic vs. North German Confederation | Central Europe || Japanese invasions of Korea | 1 million [78] | 1592–1598 | Joseon and Ming dynasty vs. Japan | Korean Peninsula || Panthay Rebellion | 1 million[79] | 1856–1873 | Qing Dynasty vs. Pingnan Guo | China || Seven Years' War | 1 million[80] | 1756–1763 | Great Britain, Kingdom of Prussia, Hanover, Portugal, and allies vs. Kingdom of France, Habsburg empire, Saxony, Spain, and allies | Global || American Civil War | 0.6–1 million[81][82] | 1861–1865 | United States vs. Confederate States | North America ||\n",
       "Source URL: https://en.wikipedia.org/wiki/List_of_wars_by_death_toll\n",
       "\n"
      ]
@@ -58,6 +52,7 @@
     "import pandas as pd\n",
     "from transformers import AutoTokenizer\n",
     "import os\n",
+    "import time\n",
     "from io import StringIO\n",
     "import logging\n",
     "from tqdm.notebook import tqdm\n",
@@ -143,6 +138,7 @@
     "\n",
     "def scrape_and_chunk_page(driver, url):\n",
     "    driver.get(url)\n",
+    "    time.sleep(1)\n",
     "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
     "    \n",
     "    chunks = []\n",
@@ -208,14 +204,14 @@
     "\n",
     "print(f\"Total Chunks: {len(scraped_chunks)}\")\n",
     "\n",
-    "for chunk, url in scraped_chunks[:5]:\n",
+    "for chunk, url in scraped_chunks[:3]:\n",
     "    print(f\"Chunk: {chunk}\\nSource URL: {url}\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "5fe29abd",
+   "id": "8f543279",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ccd17796",
+   "id": "82154565",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "d48db041",
+   "id": "3eb7e384",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "c8a433c5",
+   "id": "9d7782d1",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9eff3884",
+   "id": "13817562",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a27ca90f",
+   "id": "a653292e",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "47627668",
+   "id": "73227006",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "0326968e",
+   "id": "8cbaaac9",
    "metadata": {},
    "outputs": [
     {
